--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
   <a href="#home">Home</a>
   <a href="#news">News</a>
   <div class="dropdown">
-    <button class="dropbtn">Dropdown 
+    <button class="dropbtn">Fasilitas 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
