--- a/header.html
+++ b/header.html
@@ -15,7 +15,7 @@
     </button>
     <div class="dropdown-content">
       <a href="inggris.html">Inggris</a>
-      <a href="jerman.html">Jerman</a>
+      <a href="jerman.html">Jermans</a>
       <a href="perancis.html">Perancis</a>
     </div>
   </div> 
