--- a/header.html
+++ b/header.html
@@ -8,15 +8,15 @@
 
 <div class="navbar">
   <a href="header.html">Beranda</a>
-  <a href="fasilitas.html">Fasilitas</a>
+  <a href="fasilitas.html">Fasilitas dan Layanan</a>
   <div class="dropdown">
-    <button class="dropbtn">Bahasa 
+    <button class="dropbtn">Program Kursus Bahasa 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="inggris.html">Inggris</a>
-      <a href="jerman.html">Jermans</a>
-      <a href="perancis.html">Perancis</a>
+      <a href="inggris.html">Bahasa Inggris</a>
+      <a href="jerman.html">Bahasa Jerman</a>
+      <a href="perancis.html">Bahasa Perancis</a>
     </div>
   </div> 
 </div>
