layanan to Pelayanan

--- a/header.html
+++ b/header.html
@@ -8,7 +8,7 @@
 
 <div class="navbar">
   <a href="header.html">Beranda</a>
-  <a href="fasilitas.html">Fasilitas dan Layanan</a>
+  <a href="fasilitas.html">Fasilitas dan Pelayanan</a>
   <div class="dropdown">
     <button class="dropbtn">Program Kursus Bahasa 
       <i class="fa fa-caret-down"></i>
