ganti avatar img

--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="ba.jpg" alt="aniiyolah1" style="width:100%">
+      <img src="Avatar f.png" alt="aniiyolah1" style="width:100%">
       <div class="container">
         <h2>Ani Darmawikarta</h2>
         <p class="title">Head Of Agency</p>
@@ -51,7 +51,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="ba.jpg" alt="arisaput2" style="width:100%">
+      <img src="avatar m.png" alt="arisaput2" style="width:100%">
       <div class="container">
         <h2>Ari Saputra</h2>
         <p class="title">Teacher</p>
@@ -64,7 +64,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="ba.jpg" alt="Astita3" style="width:100%">
+      <img src="Avatar f.png" alt="Astita3" style="width:100%">
       <div class="container">
         <h2>Astita</h2>
         <p class="title">Teacher</p>
@@ -77,7 +77,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="ba.jpg" alt="bambangkurniyawan24" style="width:100%">
+      <img src="avatar m" alt="bambangkurniyawan24" style="width:100%">
       <div class="container">
         <h2>Bambang Kurniyawan</h2>
         <p class="title">Teacher</p>
@@ -90,7 +90,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="ba.jpg" alt="yudabae4" style="width:100%">
+      <img src="avatar m" alt="yudabae4" style="width:100%">
       <div class="container">
         <h2>Yuda</h2>
         <p class="title">Teacher</p>
