--- a/about-us.html
+++ b/about-us.html
@@ -38,7 +38,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="Avatar f.png" alt="aniiyolah1" style="width:100%">
+      <img src="avatar f.png" alt="aniiyolah1" style="width:100%">
       <div class="container">
         <h2>Ani Darmawikarta</h2>
         <p class="title">Head Of Agency</p>
@@ -64,7 +64,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="Avatar f.png" alt="Astita3" style="width:100%">
+      <img src="avatar f.png" alt="Astita3" style="width:100%">
       <div class="container">
         <h2>Astita</h2>
         <p class="title">Teacher</p>
