--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="avatar m" alt="bambangkurniyawan24" style="width:100%">
+      <img src="avatar m.png" alt="bambangkurniyawan24" style="width:100%">
       <div class="container">
         <h2>Bambang Kurniyawan</h2>
         <p class="title">Teacher</p>
@@ -90,7 +90,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="avatar m" alt="yudabae4" style="width:100%">
+      <img src="avatar m.png" alt="yudabae4" style="width:100%">
       <div class="container">
         <h2>Yuda</h2>
         <p class="title">Teacher</p>
