--- a/kursus-belajar.html
+++ b/kursus-belajar.html
@@ -29,9 +29,9 @@
 
 
 <div class="about-section">
-  <h1>Kursus belajar B46</h1>
+   <img src="b46.png">
+  <h1><span>Kursus Belajar B46</span></h1>
   <p>Tempat Belajar Kursus Bahasa Asing Mudah Dan Cepat</p>
-  <p>Lembaga Les Bahasa Asing (LLBA)</p>
 </div>
     <section class="content-wrapper">
     	<div class="container">
