--- a/kursus-belajar.html
+++ b/kursus-belajar.html
@@ -29,7 +29,7 @@
 
 
 <div class="about-section">
-   <img src="b46.png">
+  <form><img style="" src="b46.png"></form>
   <h1><span>Kursus Belajar B46</span></h1>
   <p>Tempat Belajar Kursus Bahasa Asing Mudah Dan Cepat</p>
 </div>
