--- a/navbar.html
+++ b/navbar.html
@@ -14,9 +14,9 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="inggris.html">Inggris</a>
-      <a href="jerman.html">Jerman</a>
-      <a href="perancis.html">Perancis</a>
+       <a href="inggris.html"> Program Bahasa Inggris</a>
+      <a href="jerman.html"> Program Bahasa Jerman</a>
+      <a href="perancis.html">Program Bahasa Perancis</a>
     </div>
   </div> 
 </div>
